<resources>
    <string name="app_name">TLM_APP</string>
    <string-array name="Location">
        <item></item>
        <item>บริเวณทางเดินTT-LA</item>
        <item>บริเวณห้องเก็บอุปกรณ์ERT</item>
    </string-array>
    <string-array name="total">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="Total_Type">
        <item></item>
        <item>ชุด</item>
        <item>ใบ</item>
        <item>ผืน</item>
        <item>คู่</item>
        <item>ตัว</item>
        <item>เส้น</item>
        <item>คัน</item>
        <item>แกลลอน</item>
        <item>ด้าม</item>
        <item>อัน</item>
    </string-array>
    <string-array name="Generality">
        <item></item>
        <item>อยู่ครบ/ชำรุด</item>
        <item>ไม่ครบ/ชำรุด</item>
        <item>อยู่ครบ/ไม่ชำรุด</item>
        <item>ไม่ครบ/ไม่ชำรุด</item>
    </string-array>
    <string-array name="device_Type">
        <item></item>
        <item>ชุดดับเพลิงในอาคาร</item>
        <item>เสื้อผจญเพลิงนอกอาคาร</item>
        <item>หมวกผจญเพลิง</item>
        <item>Hood คลุมศรีษะกันความร้อน</item>
        <item>รองเท้าบูซ</item>
        <item>ถุงมือกันความร้อน</item>
        <item>ถุงมือหนังกันความร้อน</item>
        <item>ถุงมือหนัง</item>
        <item>ถุงมือยางดำ</item>
        <item>SCBA</item>
        <item>หน้ากากป้องกันสารเคมี</item>
        <item>ปืนฉีดน้ำดับเพลิง(ฟ็อคซ์)</item>
        <item>ปืนฉีดโฟม</item>
        <item>ปืนฉีดตรง</item>
        <item>ปืนฉีดฝอย</item>
        <item>หัวฉีดปรับตรง</item>
        <item>หัวฉีดปรับฝอย</item>
        <item>หัวฉีดน้ำดับเพลิงสวมเร็ว</item>
        <item>ข้อต่อสวมเร็วแบบมีเพรสเชอร์เกจ</item>
        <item>ข้อต่อสามทางสวมเร็ว</item>
        <item>สายดับเพลิง2.5 นิ้ว</item>
        <item>สายดับเพลิง1 1/2 นิ้ว</item>
        <item>สายดับเพลิง2 1/2 นิ้ว</item>
        <item>สายดับเพลิง2 1/2 นิ้ว(ตัวผู้2ด้าน)</item>
        <item>Mobile Foam</item>
        <item>น้ำยาโฟม</item>
        <item>ขวาน</item>
        <item>ไม้ชักฟิวส์</item>
        <item>Blower</item>
        <item>ท่อดูดระบายอากาศ</item>
        <item>ตะกร้าหวาย+ถุงกระสอบ</item>
        <item>หลอดไฟส่องสว่าง+ขาตั้ง</item>
        <item>คีมตัดเหล็ก</item>
    </string-array>
    <string-array name="electricity_emergency_Type">
        <item></item>
        <item>Battery Box</item>
        <item>Battery Center Control</item>
        <item>Battery stand alone unit</item>
    </string-array>
    <string-array name="generality_electricity">
        <item></item>
        <item>หลอดไฟติด/สภาพทั่วไป OK</item>
        <item>หลอดไฟไม่ติด/สภาพทั่วไป NO</item>
        <item>หลอดไฟติด/สภาพทั่วไป NO</item>
        <item>หลอดไฟไม่ติด/สภาพทั่วไป OK</item>
    </string-array>
    <string-array name="location_FnSafety2">
        <item></item>
        <item>ประตูทางเข้า OFFICE</item>
        <item>ตรงข้ามห้อง Pantry Room</item>
        <item>ในห้องน้ำหญิง</item>
        <item>ในห้องน้ำชาย</item>
        <item>ทางเดินใกล้จุด Breakdown</item>
        <item>ทางเดินใกล้จุด Breakdown</item>
        <item>ในโรงงานด้านหลังใกล้ Control Press</item>
        <item>มุมผนังระหว่างเครื่อง Press กับห้อง MDB</item>
        <item>ติดมุมผนังห้อง MDB ด้านนอก</item>
        <item>ติดมุมผนังห้อง MDB ด้านนอก</item>
        <item>ติดมุมผนังห้อง MDB ด้านใน</item>
        <item>ติดมุมผนังห้อง MDB ด้านใน</item>
        <item>ติดผนังทางเดินไปจุด Loading</item>
        <item>ติดผนังทางเดินไปจุด Loading ตรงข้าม PP STORE</item>
        <item>FL.2 ห้อง Boiler</item>
        <item>Fire pump</item>
        <item>ชั้นบนออฟฟิศหน้าห้อง Server</item>
        <item>ชั้นล่างออฟฟิศ แผนก PU</item>
        <item>หน้าห้องพยาบาล</item>
        <item>ห้อง Server</item>
        <item>ห้อง Meeting Room 1</item>
        <item>ในห้อง Control MT TT</item>
        <item>ในห้อง TT Office</item>
        <item>ในห้อง Mixing</item>
        <item>ในห้อง QA Office</item>
        <item>ทางเข้า TT.(ใกล้ประตูเข้า TT.C)</item>
        <item>ในห้อง QATT LAB</item>
        <item>หน้าบอร์ดในแผนก TT.</item>
        <item>ท้ายไลน์ TT-C</item>
        <item>หน้าห้อง Metering TT-C</item>
        <item>หัวไลน์ TT-C</item>
        <item>หัวไลน์ TT-F</item>
        <item>ท้ายไลน์ TT-F</item>
        <item>หน้าห้อง Metering TT-F</item>
        <item>ท้ายไลน์ TT-D</item>
        <item>หน้าห้อง Metering TT-D</item>
        <item>หัวไลน์ TT-D</item>
        <item>ท้ายไลน์ TT-E</item>
        <item>หัวไลน์ TT-E</item>
        <item>หน้าห้อง Metering TT-E</item>
        <item>มุมเสาด้านใน MC</item>
        <item>ทางเข้า LA มุมเสาใกล้เครื่อง Press Line4-5</item>
        <item>ทางเข้า LA มุมเสาใกล้ห้อง Prepreg</item>
        <item>ในห้องเย็น MC(Cold1)</item>
        <item>ในห้องเย็น MC(Cold1)</item>
        <item>กำแพงห้อง Press Control ใน LA</item>
        <item>กำแพงจุดวางกระดาษ ใน LA Line ล่าง</item>
        <item>ใกล้ประตูฉุกเฉินใกล้เครื่อง Packing ใน LA</item>
        <item>กำแพงหลังเครื่อง PACKING ใน LA</item>
        <item>ใกล้ประตูฉุกเฉินด้านหลัง ใน LA</item>
        <item>หน้า LA Office</item>
        <item>กำแพงทางขึ้น-ลงชั้นใต้ดิน Clean Room</item>
        <item>ในห้องใต้ดิน LA</item>
        <item>LA Line บนหน้าห้อง Clean Room</item>
        <item>LA Line บนจุดงาน Break down ใกล้ประตู Press</item>
        <item>LA Line ล่างใกล้ประตูทางเข้า LA</item>
        <item>ในห้อง BOILER</item>
        <item>ในห้อง BOILER</item>
        <item>ในห้อง Lay-Up LA Line บน</item>
        <item>ในห้อง Lay-Up LA Line บน</item>
        <item>ในห้องตัด PREPERG AUTO</item>
        <item>ในห้องตัด PREPERG AUTO</item>
        <item>ในห้อง MDB</item>
        <item>ในห้อง Facility</item>
        <item>ในห้อง Fire Pump</item>
        <item>ห้องขัด Thermaplate ข้าง MT Workshop</item>
        <item>ทางเดิน TT-LA</item>
        <item>MC Loading</item>
        <item>TLM Store เช่า KCE(ประตูหนีไฟ)</item>
        <item>อาคารอเนกประสงค์ ชั้น2(Canteen)</item>
        <item>อาคารอเนกประสงค์ ชั้น2(Canteen)</item>
        <item>ทางเดิน TT-LA(ใกล้ทางเข้าแผนก LA)</item>
        <item>หัวไลน์ TT-G</item>
        <item>ท้ายไลน์ TT-G</item>
        <item>หน้าห้อง Metering TT-G</item>
        <item>ในห้อง Layup4-5</item>
        <item>อาคารอเนกประสงค์ ชั้น1 Office HR</item>
        <item>อาคารอเนกประสงค์ ชั้น2 Office R/D</item>
        <item>อาคารอเนกประสงค์ ชั้น3 Office Engineer</item>
        <item>อาคารอเนกประสงค์ ชั้น4 Office MC/PC</item>
    </string-array>
    <string-array name="Location_fire_exitFn4">
        <item></item>
        <item>ท้ายไลน์ TT-E</item>
        <item>ท้ายไลน์ TT-D</item>
        <item>ท้ายไลน์ TT-G</item>
        <item>จุดงาน Packing LA Line 123</item>
        <item>จุดงาน Break down Line 123</item>
        <item>ห้อง Mixing</item>
        <item>MC Store ฝั่ง KCE</item>
    </string-array>
    <string-array name="Type_fire_exitFn4">
        <item></item>
        <item>Exit sign board</item>
        <item>Exit sign board</item>
        <item>Exit sign board</item>
        <item>Battery box</item>
        <item>Battery box</item>
        <item>Exit sign board</item>
        <item>Exit sign board</item>
    </string-array>
    <string-array name="generality_fire_exitFn4">
        <item></item>
        <item>หลอดไฟติด</item>
        <item>หลอดไม่ไฟติด</item>
        <item>การทดสอบการผลักออก OK</item>
        <item>การทดสอบการผลักออก NO</item>
        <item>สภาพทั่วไปต้องไม่มีสิ่งกีดขวาง OK</item>
        <item>สภาพทั่วไปต้องไม่มีสิ่งกีดขวาง NO</item>
    </string-array>
    <string-array name="id_devicefire_cabinetfn5">
        <item></item>
        <item>HOSE REEL BOX NO.1</item>
        <item>HOSE REEL BOX NO.2</item>
        <item>HOSE REEL BOX NO.3</item>
        <item>HOSE REEL BOX NO.4</item>
        <item>HOSE REEL BOX NO.5</item>
        <item>HOSE REEL BOX NO.6</item>
        <item>HOSE REEL BOX NO.7</item>
        <item>HOSE REEL BOX NO.8</item>
        <item>HOSE REEL BOX NO.9</item>
        <item>HOSE REEL BOX NO.10</item>
        <item>ตู้เก็บสายดับเพลิง NO.1</item>
        <item>ตู้เก็บสายดับเพลิง NO.2</item>
        <item>ตู้เก็บสายดับเพลิง NO.3</item>
        <item>ตู้เก็บสายดับเพลิง NO.4</item>
        <item>ตู้เก็บสายดับเพลิง NO.5</item>
        <item>ตู้เก็บสายดับเพลิง NO.6</item>
        <item>ตู้เก็บสายดับเพลิง NO.7</item>
    </string-array>
    <string-array name="deviceType_Fire_cabinetFn5">
        <item></item>
        <item>ตู้หัวจ่ายสาย 1 1/2 นิ้ว</item>
        <item>สาย 2.5 นิ้ว 2 เส้น</item>
        <item>สาย 1.5 นิ้ว 1 เส้น</item>
        <item>สาย 1.5 นิ้ว 1 เส้น,2.5 นิ้ว 2 เส้น</item>
        <item>สาย 1.5 นิ้ว 1 เส้น,หัวฉีด 1 หัว</item>
        <item>สาย 2.5 นิ้ว 1 เส้น,หัวฉีด 1 หัว</item>
        <item>สาย 1.5 นิ้ว 1 เส้น</item>
        <item>สาย 1.5 นิ้ว 1 เส้น,หัวฉีด 1 หัว</item>
    </string-array>
    <string-array name="locationFire_cabinetfn5">
        <item></item>
        <item>ระเบียงหน้าสำนักงาน</item>
        <item>บริเวณพื้นที่ Work shop แผนก MT</item>
        <item>ทางเดินอาคาร ด้าน TT-D</item>
        <item>ทางดินอาคาร ใกล้ประตูทางเข้าแผนก TT</item>
        <item>ทางเดินอาคาร หน้าห้อง Pilot</item>
        <item>ในอาคาร LA มุมด้านห้องน้ำ</item>
        <item>ในอาคาร LA ทางเข้าห้อง Clean room</item>
        <item>ด้านนอกอาคาร LA ถนนด้านข้าง</item>
        <item>ชั้นล่างห้อง Facility ข้างบันได</item>
        <item>หน้าทางเข้าแผนก LA</item>
        <item>หน้าห้อง ERT</item>
        <item>ข้างห้อง Fire Pump</item>
        <item>ข้างห้อง Fire Pump</item>
        <item>ข้างห้อง Fire Pump</item>
        <item>ข้างห้อง Fire Pump</item>
        <item>ข้างห้อง Fire Pump</item>
        <item>หลัง TT ข้างประตูฉุกเฉิน</item>
    </string-array>
    <string-array name="generalityFire_cabinetfn5">
        <item></item>
        <item>มี</item>
        <item>ไม่มี</item>
        <item>ใช่</item>
        <item>ไม่ใช่</item>
    </string-array>
    <string-array name="locat_EyeShower">
        <item></item>
        <item>กำแพงตรงข้ามประตูมางเข้าห้อง Mixing</item>
        <item>จุด Tank Load น้ำยาเคมี</item>
        <item>กำแพงด้านขวาเครื่อง TT #F</item>
        <item>พื้นที่เก็บขยะแผนก HR</item>
        <item>สโตร์ MC ฝั่ง KCE</item>
    </string-array>
    <string-array name="device_Type_EyeShower">
        <item></item>
        <item>Eye Washes No.1</item>
        <item>Eye Washes and Showers No.2</item>
        <item>Eye Washes No.3</item>
        <item>Eye Washes No.4</item>
        <item>Eye Washes No.5</item>
    </string-array>
    <string-array name="generality_EyeShower">
        <item></item>
        <item>ใช่</item>
        <item>ไม่ใช่</item>
        <item>ปกติ</item>
        <item>ไม่ปกติ</item>
    </string-array>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter Email address</string>
    <string name="hint_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="link_to_register">Need to signup Get registere now!</string>
    <string name="forgot_password_button">Forgot your password?</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="forgot_password">Forgot password???</string>
    <string name="forgot_password_msg">We just need your registered Email to send password.</string>
</resources>