<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLogin"
    android:theme="@style/Theme.AppCompat.Light"
    android:orientation="vertical"
    tools:context=".User_Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_logotlmtest" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="130dp">

        <ImageView
            android:id="@+id/im_userLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_userlogin40" />

    <EditText
            android:id="@+id/email"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="28dp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

    <ImageView
            android:id="@+id/im_userQrLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_password40"
            android:layout_marginLeft="15dp" />

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="28dp"/>
    </LinearLayout>

    <!-- Login Button -->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/framebtnlogin"
        android:text="@string/login_button"
        android:textColor="@color/colorWhite"
        android:textSize="30dp" />

    <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:text="@string/forgot_password_button"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="@color/Forgot_password" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:textSize="20dp" />


    <ProgressBar
        android:id="@+id/pbbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>

