<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLogin"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/im_back_arrowfn_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back50" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTER"
            android:textColor="@color/colorBlack"
            android:textSize="35dp"
            android:theme="@style/MyFont" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_logotlmtest" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_userLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_userlogin40"
            android:layout_marginLeft="15dp" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="28dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorBlack"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_userQrLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_password40"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_marginTop="4dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorBlack"
            android:textSize="28dp"/>
    </LinearLayout>

    <Button
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/frame_btn_signup"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/black"
        android:textSize="30dp"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


    </LinearLayout>

